# codex-cv

./: .npmignore  README.md  TASK_ollama_agent.md  as_v_2_change.md  create-npm-package.md  package-lock.json  package.json  task_2.md  task_3.md  task_4.md  task_5.md  task_6.md  todo.md  todo_1.md  todo_1_2.md  todo_2.md  todo_3.md  v_1_change.md  v_2_change.md  v_3_change.md
.codex/agents/: bug-detector.md  code-fixer.md  docs-reviewer.md  perf-analyzer.md  security-scanner.md  test-writer.md
.github/workflows/: build.yml
agents/: bug-hunter.md  code-reviewer.md  test-generator.md
codex-cli/: package.json
codex-cli/scripts/: build_npm_package.py
codex-rs/: Cargo.toml
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: main.rs  subagents_cmd.rs
codex-rs/cli/tests/: subagents.rs  subagents_acceptance.rs
codex-rs/core/: Cargo.toml
codex-rs/core/src/: apply_patch.rs  client.rs  codex.rs  config.rs  conversation_manager.rs  error.rs  lib.rs  subagent_conflict_tracker.rs  subagent_telemetry.rs  telemetry.rs  turn_diff_tracker.rs
codex-rs/exec/src/: event_processor_with_human_output.rs
codex-rs/exec/tests/: event_processor_with_json_output.rs
codex-rs/mcp-server/: Cargo.toml
codex-rs/mcp-server/src/: codex_message_processor.rs  codex_tool_config.rs  codex_tool_runner.rs  message_processor.rs
codex-rs/protocol-ts/: Cargo.toml
codex-rs/protocol-ts/src/: lib.rs
codex-rs/protocol/src/: mcp_protocol.rs  protocol.rs
codex-rs/subagents/: Cargo.toml
codex-rs/subagents-derive/: Cargo.toml
codex-rs/subagents-derive/src/: lib.rs
codex-rs/subagents-derive/tests/: trybuild.rs
codex-rs/subagents-derive/tests/trybuild/: basic.rs
codex-rs/subagents/src/: builder.rs  code_writer.rs  error.rs  feature_flag_tests.rs  integration_tests.rs  lib.rs  parser.rs  pipeline.rs  registry.rs  reviewer.rs  spec.rs  spec_parser.rs  task_context.rs  tester.rs  traits.rs
codex-rs/subagents/src/core/: code_writer.rs  mod.rs  reviewer.rs  spec_parser.rs  tester.rs
codex-rs/subagents/src/pipeline/: mod.rs  transform.rs  types.rs  validation.rs
codex-rs/subagents/src/snapshots/: codex_subagents__spec_parser__tests__spec_parser_basic.snap
codex-rs/subagents/tests/: derive.rs  manual_demo_script.md  orchestrator_lifecycle_unit.rs  parser_registry_unit.rs  registry.rs  sandbox_environment_audit.rs  tool_policy_unit.rs
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: app.rs  app_backtrack.rs  chatwidget.rs  diff_render.rs  (+4 more)
docs/: risk-mitigation-audit.md  rollout-management.md  subagents-migration.md  subagents-platform-validation.md  subagents-rollout-plan.md  subagents.md
docs/adr/: 2025-09-27-subagents.md
docs/subagents/: adr-0001-subagents.md  claude-subagent-study.md  demo-playbook.md  demo.md  hardening.md  packaging.md  phase0.md  repo-anchors.md  rollout-plan.md  rollout.md  spec-format.md  spec.md  success-metrics.md  telemetry.md  verification-targets.md
examples/agents/: doc-writer.md
lib/: agent-manager.js  binary-manager.js  config.js
rust-cli/: Cargo.toml
rust-cli/src/: agent.rs  cli.rs  config.rs  main.rs  registry.rs
rust-cli/templates/: basic.md  code-review.md  docs.md  testing.md
scripts/: build.js  postinstall.js
(+12 files in other folders)
