[package]
name = "codex-subagents"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["stat-guy"]
description = "Standalone CLI for AI-powered coding subagents"

[[bin]]
name = "codex-subagents"
path = "src/main.rs"

[dependencies]
# Core functionality
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# File system and paths
dirs = "5.0"
walkdir = "2.0"

# CLI utilities
colored = "2.0"
dialoguer = "0.11"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID for conversation IDs
uuid = { version = "1.0", features = ["v4"] }

# Regex for validation
regex = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Cross-compilation configuration
[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"

[target.aarch64-unknown-linux-musl]
linker = "aarch64-linux-musl-gcc"

[build-dependencies]
# For cross-compilation setup if needed