[package]
name = "codex-subagents-derive"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
codex-subagents = { path = "../subagents" }

[dev-dependencies]
trybuild = { workspace = true }
