[package]
name = "codex-subagents"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
authors = ["OpenAI"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dirs = { workspace = true }
futures = "0.3"
indexmap = { workspace = true }
once_cell = "1.20.2"
regex = "1.10"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
textwrap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.6", features = ["v4", "serde"] }
walkdir = { workspace = true }

[dev-dependencies]
codex-subagents-derive = { path = "../subagents-derive" }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
