[package]
name = "codex-subagents"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
once_cell = { workspace = true }
regex-lite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde-human-readable"] }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
insta = { workspace = true }
